# example-qt5

./: CMakeLists.txt
cmake/: platform.cmake
src/: example.cpp
